--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background: #f0f0f0;
       padding: 2rem;
       text-align: center;
-      background-image: url('noise.jpg');
+      background-image: url('tileable-noise.png');
     }
 
     canvas {
