--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CompostIMG - A Future Everything Image Editing & Compression Tool </title>
-  <script src="script.js"></script>
+  <script src="index.js"></script>
   <style>
     body {
       font-family: 'Courier New', Courier, monospace;
